[tool.poetry]
name = "statsnet-python-sdk"
version = "0.0.3"
description = "Python SDK for statsnet.co"
authors = ["statsnet <hi@statsnet.co>"]
readme = "README.md"
packages = [
    { include = "statsnet_python_sdk" },
]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "=0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry_bumpversion.file."statsnet_python_sdk/__init__.py"]